# setmeup

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-17-setmeup-foundation-processing.md
docs/superpowers/specs/: 2026-06-17-setmeup-dj-pipeline-design.md
src/setmeup/: cli.py  config.py  dedupe.py  matching.py  naming.py  organize.py  process.py
src/setmeup/acquire/: fetch.py  importer.py
src/setmeup/audio/: filename.py  fingerprint.py  metadata.py  quality.py  version.py
src/setmeup/slskd/: client.py  selection.py
src/setmeup/sources/: base.py  csv_source.py  rekordbox.py  spotify.py  wantlist.py
src/setmeup/state/: db.py  models.py  repository.py  wants.py
tests/: conftest.py  test_acquire_integration.py  test_cli.py  test_config.py  test_db.py  test_dedupe.py  test_fetch.py  test_filename.py  test_fingerprint.py  test_importer.py  test_integration.py  test_matching.py  test_metadata.py  test_naming.py  test_organize.py  test_process.py  test_quality.py  test_rekordbox_integration.py  test_repository.py  test_selection.py  test_slskd_client.py  test_smoke.py  test_sources_csv.py  test_sources_rekordbox.py  test_sources_spotify.py  test_sources_wantlist.py  test_version.py  test_wants.py
