[project]
name = "setmeup"
version = "0.1.0"
description = "DJ music acquisition and library pipeline"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "mutagen>=1.47",
    "pyacoustid>=1.3",
    "requests>=2.31",
    "rapidfuzz>=3.0",
    "spotipy>=2.23",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
setmeup = "setmeup.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setmeup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
